# EndlessRunner-game

./: CMakeLists.txt  README.md
src/: Constants.h  ResourceManager.cpp  ResourceManager.h  main.cpp
src/entities/: Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Ground.cpp  Ground.h  Player.cpp  Player.h
src/gamestates/: IState.h  StateDeath.cpp  StateDeath.h  StateMenu.cpp  StateMenu.h  StatePaused.cpp  StatePaused.h  StatePlaying.cpp  StatePlaying.h  StateStack.h
